Engineering method doc

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 out/production/FIBA-Manager/ui/images/LoadingImage.png
 
 Images/Images Interface/owo.png
+
+out/production/FIBA-Manager/Test/Caso C insertar-eliminar.jpg
+
+out/production/FIBA-Manager/Test/Caso B insertar-eliminar.jpg
+
+out/production/FIBA-Manager/Test/Caso A insertar-eliminar.jpg
